fix: Adjust sidebar resizing and display
- Use '::after' pseudo-element to add space at the end of the episodes listed in the sidebar entity details so that the last tr element does not get cut off
- Set height of resizer in useEffect so that the resizer covers the entre height of the sidebar (even when there is a overflow scroll)

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -198,6 +198,12 @@ circle {
     background-color: #f5f5f5;
 }
 
+#entityDetails table tbody::after {
+    content: '';
+    display: table-row;
+    height: 25px;
+}
+
 .resizer {
     position: absolute;
     left: 0;
@@ -206,6 +212,7 @@ circle {
     height: 100%;
     cursor: ew-resize; /* Cursor appears as left-right resize arrow */
     background-color: #ccc; /* Just to make it visible */
+    height: calc(100% + 25px);
 }
 
 .tabs {
